--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
       <div class="channel-bar__flex">
         <div class="channel-bar__picture">
           <div class="channel-bar__singer">
-            <img
-              src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTAPp4Cyx0uAkK3RupL-EZJ4z-BPsC01kCIoBIbfPlyW208WBn_"
-            />
+            <a href="https://www.youtube.com/channel/UCqECaJ8Gagnn7YCbPEzWH6g">
+              <img
+                src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTAPp4Cyx0uAkK3RupL-EZJ4z-BPsC01kCIoBIbfPlyW208WBn_"
+            /></a>
             <i class="fa-solid fa-circle-check"></i>
             <div class="channel-bar__name">Taylor Swift</div>
             <div class="channel-bar__follow">Follow</div>
@@ -101,14 +102,41 @@
 
         <div class="channel-bar__picture">
           <div class="channel-bar__singer">
-            <img
-              src="https://theartsdesk.com/sites/default/files/mastimages/harry.jpg"
-            />
+            <a href="https://www.youtube.com/channel/UCZFWPqqPkFlNwIxcpsLOwew"
+              ><img
+                src="https://theartsdesk.com/sites/default/files/mastimages/harry.jpg"
+            /></a>
             <i class="fa-solid fa-circle-check"></i>
             <div class="channel-bar__name">Harry Styles</div>
             <div class="channel-bar__follow">Follow</div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="red"></div>
+    <div class="status-bar">
+      <div class="status-bar__first">
+        <div class="updates__emo"><i class="fa-solid fa-message"></i></div>
+        <div class="bar__letters">Updates</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="calls__emo"><i class="fa-solid fa-phone"></i></div>
+        <div class="bar__letters">Calls</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="communities__emo">
+          <i class="fa-solid fa-people-group"></i>
+        </div>
+        <div class="bar__letters">Communities</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="chats__emo"><i class="fa-solid fa-comments"></i></div>
+
+        <div class="bar__letters">Chats</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="settings__emo"><i class="fa-solid fa-gears"></i></div>
+        <div class="bar__letters">Settings</div>
       </div>
     </div>
   </body>
