--- a/calls.html
+++ b/calls.html
@@ -18,40 +18,19 @@
         <div><i class="fa-solid fa-battery-full"></i></div>
       </div>
     </div>
-
-    <div class="top">
-      <div class="top__edit">Edit</div>
-      <div class="top__button">
-        <span class="top__all">All</span>
-        <span class="top__missed">Missed</span>
-      </div>
-      <div class="top__emo"><i class="fa-solid fa-phone"></i></div>
-    </div>
-
-    <div class="status-bar">
-      <div class="status-bar__first">
-        <div class="updates__emo"><i class="fa-solid fa-message"></i></div>
-        <div class="bar__letters">Updates</div>
-      </div>
-      <div class="status-bar__first">
-        <div class="calls__emo"><i class="fa-solid fa-phone"></i></div>
-        <div class="bar__letters">Calls</div>
-      </div>
-      <div class="status-bar__first">
-        <div class="communities__emo">
-          <i class="fa-solid fa-people-group"></i>
+    <div class="topbar">
+      <div class="topbar__edit">Edit</div>
+      <div class="tobar__buttons">
+        <div class="all">All</div>
+        <div class="missed">Missed</div>
         </div>
-        <div class="bar__letters">Communities</div>
+        <div class="topbar__icon"><i class="fa-solid fa-phone"></i></div>
       </div>
-      <div class="status-bar__first">
-        <div class="chats__emo"><i class="fa-solid fa-comments"></i></div>
-
-        <div class="bar__letters">Chats</div>
-      </div>
-      <div class="status-bar__first">
-        <div class="settings__emo"><i class="fa-solid fa-gears"></i></div>
-        <div class="bar__letters">Settings</div>
-      </div>
+    </div>
+    <h1 class="updates">Calls</h1>
+    <div class="search-bar">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <span>Search</span>
     </div>
   </body>
   <script
