--- a/index.html
+++ b/index.html
@@ -113,14 +113,16 @@
         </div>
       </div>
     </div>
-    <div class="red"></div>
+
     <div class="status-bar">
       <div class="status-bar__first">
         <div class="updates__emo"><i class="fa-solid fa-message"></i></div>
         <div class="bar__letters">Updates</div>
       </div>
       <div class="status-bar__first">
-        <div class="calls__emo"><i class="fa-solid fa-phone"></i></div>
+        <div class="calls__emo">
+          <a href="calls.html"><i class="fa-solid fa-phone"></i></a>
+        </div>
         <div class="bar__letters">Calls</div>
       </div>
       <div class="status-bar__first">
