--- a/calls.html
+++ b/calls.html
@@ -21,8 +21,8 @@
     <div class="topbar">
       <div class="topbar__edit">Edit</div>
       <div class="tobar__buttons">
-        <div class="all">All</div>
-        <div class="missed">Missed</div>
+        <span class="all">All</span>
+        <span class="missed">Missed</span>
         </div>
         <div class="topbar__icon"><i class="fa-solid fa-phone"></i></div>
       </div>
@@ -31,6 +31,52 @@
     <div class="search-bar">
       <i class="fa-solid fa-magnifying-glass"></i>
       <span>Search</span>
+    </div>
+
+    <div class="call-link">
+      <div class="call-link__icon"><i class="fa-solid fa-square-share-nodes"></i></div>
+   <div class="call-link__des">
+      <div class="call-link__top">Create Call Link</div>
+  <div class="call-link__bottom">Share a link for your Whatsapp call</div>  
+  </div>
+  </div>
+
+  <h1 class="recent">Recent</h1>
+  
+  <div class="call-history">
+    <div class="call-history__img"><img src="https://images.unsplash.com/photo-1615751072497-5f5169febe17?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y3V0ZSUyMGRvZ3xlbnwwfHwwfHx8MA%3D%3D"/></div>
+  <div class="call-history__middle">
+    <div class="name">Toast</div>
+    <div class="outgoing"><i class="fa-solid fa-phone"></i> Outgoing</div>
+  </div>
+  <div class="call-history">Wednesday <i class="fa-solid fa-circle-info"></i> </div>
+  </div>
+<div class="status-bar">
+      <div class="status-bar__first">
+        <div class="updates__emo"><i class="fa-solid fa-message"></i></div>
+        <div class="bar__letters">Updates</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="calls__emo">
+          <a href="calls.html"><i class="fa-solid fa-phone"></i></a>
+        </div>
+        <div class="bar__letters">Calls</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="communities__emo">
+          <i class="fa-solid fa-people-group"></i>
+        </div>
+        <div class="bar__letters">Communities</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="chats__emo"><i class="fa-solid fa-comments"></i></div>
+
+        <div class="bar__letters">Chats</div>
+      </div>
+      <div class="status-bar__first">
+        <div class="settings__emo"><i class="fa-solid fa-gears"></i></div>
+        <div class="bar__letters">Settings</div>
+      </div>
     </div>
   </body>
   <script
