--- a/calls.html
+++ b/calls.html
@@ -21,7 +21,7 @@
     <div class="topbar">
       <div class="topbar__edit">Edit</div>
       <div class="tobar__buttons">
-        <span class="all">All</span>
+        <span class="all">All</h1></span>
         <span class="missed">Missed</span>
         </div>
         <div class="topbar__icon"><i class="fa-solid fa-phone"></i></div>
@@ -37,11 +37,11 @@
       <div class="call-link__icon"><i class="fa-solid fa-square-share-nodes"></i></div>
    <div class="call-link__des">
       <div class="call-link__top">Create Call Link</div>
-  <div class="call-link__bottom">Share a link for your Whatsapp call</div>  
+  <div class="call-link__share">Share a link for your Whatsapp call</div>  
   </div>
   </div>
 
-  <h1 class="recent">Recent</h1>
+  <div class="recent">Recent</div>
   
   <div class="call-history">
     <div class="call-history__img"><img src="https://images.unsplash.com/photo-1615751072497-5f5169febe17?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y3V0ZSUyMGRvZ3xlbnwwfHwwfHx8MA%3D%3D"/></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="status-bar__first">
         <div class="calls__emo">
-          <a href="calls.html"><i class="fa-solid fa-phone"></i></a>
+          <a href="calls.html"><i class="fa-solid fa-phone "></i></a>
         </div>
         <div class="bar__letters">Calls</div>
       </div>
