--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 
     <div class="status-bar">
       <div class="status-bar__first">
-        <div class="updates__emo"><i class="fa-solid fa-message"></i></div>
+        <div class="updates__emo">
+          <a href="index.html"><i class="fa-solid fa-message"></i></a>
+        </div>
         <div class="bar__letters">Updates</div>
       </div>
       <div class="status-bar__first">
@@ -127,17 +129,23 @@
       </div>
       <div class="status-bar__first">
         <div class="communities__emo">
-          <i class="fa-solid fa-people-group"></i>
+          <a href="communities.html"
+            ><i class="fa-solid fa-people-group"></i
+          ></a>
         </div>
         <div class="bar__letters">Communities</div>
       </div>
       <div class="status-bar__first">
-        <div class="chats__emo"><i class="fa-solid fa-comments"></i></div>
+        <div class="chats__emo">
+          <a href="chats.html"><i class="fa-solid fa-comments"></i></a>
+        </div>
 
         <div class="bar__letters">Chats</div>
       </div>
       <div class="status-bar__first">
-        <div class="settings__emo"><i class="fa-solid fa-gears"></i></div>
+        <div class="settings__emo">
+          <a href="setting.html"><i class="fa-solid fa-gears"></i></a>
+        </div>
         <div class="bar__letters">Settings</div>
       </div>
     </div>
