--- a/chatting.html
+++ b/chatting.html
@@ -27,7 +27,7 @@
         />
       </div>
       <div class="profile__des">
-        <div class="profile-name">Luna</div>
+        <div class="profile-name"><a href="chats.html">Luna</a></div>
         <div class="profile-info">tap here for contact info</div>
       </div>
 
@@ -86,6 +86,9 @@
       <div class="bottom-mike"><i class="fa-solid fa-microphone"></i></div>
     </div>
   </body>
+  <div id="no-mobile">
+    <span>Your Screen is too BIG. Sorry you aren't able to access.</span>
+  </div>
   <script
     src="https://kit.fontawesome.com/cea21fa77a.js"
     crossorigin="anonymous"
