--- a/communities.html
+++ b/communities.html
@@ -22,7 +22,9 @@
     <h1 class="updates">Communities</h1>
 
     <div class="img">
-      <i class="fa-brands fa-square-whatsapp"></i>
+      <a href="https://blog.whatsapp.com/communities-now-available"
+        ><i class="fa-brands fa-square-whatsapp"></i
+      ></a>
     </div>
     <div class="stay">Stay Connected with a community</div>
     <div class="stay-communities">
@@ -69,6 +71,9 @@
       </div>
     </div>
   </body>
+  <div id="no-mobile">
+    <span>Your Screen is too BIG. Sorry you aren't able to access.</span>
+  </div>
   <script
     src="https://kit.fontawesome.com/cea21fa77a.js"
     crossorigin="anonymous"
