--- a/setting.html
+++ b/setting.html
@@ -126,6 +126,9 @@
       </div>
     </div>
   </body>
+  <div id="no-mobile">
+    <span>Your Screen is too BIG. Sorry you aren't able to access.</span>
+  </div>
   <script
     src="https://kit.fontawesome.com/cea21fa77a.js"
     crossorigin="anonymous"
