--- a/calls.html
+++ b/calls.html
@@ -156,7 +156,11 @@
         <div class="bar__letters">Settings</div>
       </div>
     </div>
+    <div id="no-mobile">
+      <span>Your Screen is too BIG. Sorry you aren't able to access.</span>
+    </div>
   </body>
+
   <script
     src="https://kit.fontawesome.com/cea21fa77a.js"
     crossorigin="anonymous"
